--- a/src/composants/FormCounter/FormCounter.scss
+++ b/src/composants/FormCounter/FormCounter.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 20px;
 
     &__form {
@@ -29,7 +29,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
       border-radius: 10px;
       gap: 20px;
       height: 250px;
