--- a/src/screens/Login/Login.scss
+++ b/src/screens/Login/Login.scss
@@ -27,8 +27,8 @@
         &__inputContainer{
             display:flex;
             flex-direction: column;
-            align-items: start;
-            justify-content: start;
+            align-items: flex-start;
+            justify-content: flex-start;
 
             &__errors{
                 color: v.$error-color;
