add mobileNavbar concept

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,7 @@
       /* Ajoutez vos styles spécifiques pour la navbar mobile ici */
       /* Par exemple, afficher la navbar en haut de l'écran */
       position: fixed;
-      top: 0;
+      bottom: 0;
       left: 0;
       right: 0;
       background-color: #fff;
